fixed url paths for css and pages

--- a/grid/index.html
+++ b/grid/index.html
@@ -6,20 +6,20 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel="shortcut icon" href="/images/favicon.jpg" />
-<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
+<link rel="shortcut icon" href="../images/favicon.jpg" />
+<link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="../images/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="../images/apple-touch-icon-114x114.png" />
 
-<link rel="stylesheet" href="/css/reset.css" />
+<link rel="stylesheet" href="../css/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework -->
-<link rel="stylesheet" href="/css/centurion.css" />
+<link rel="stylesheet" href="../css/centurion.css" />
 <!-- End of Framework -->
-<link rel="stylesheet" href="/css/custom.css" />
+<link rel="stylesheet" href="../css/custom.css" />
 
 <!--[if gte IE 9]>
   <style type="text/css">
@@ -28,16 +28,15 @@
     }
   </style>
 <![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.url.js"></script>
-<script type="text/javascript" src="/js/centurion.js"></script>
+<script type="text/javascript" src="../js/jquery.url.js"></script>
+<script type="text/javascript" src="../js/centurion.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+
 <style type="text/css">
-
-
-  </style>
+</style>
 
 </head>
 <body>
@@ -50,11 +49,11 @@
           <nav id="main" class="mobile">
   <span class="openMenu hide-desktop">Open</span>
   <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/about/">About</a></li>
-    <li><a href="/grid/">Grid</a></li>
-    <li><a href="/various/">Features</a></li>
-    <!-- <li><a href="/fluid/">Try Me Fluid!</a></li> -->
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../about/index.html">About</a></li>
+    <li><a href="#">Grid</a></li>
+    <li><a href="../various/index.html">Features</a></li>
+    <!-- <li><a href="../fluid/index.html">Try Me Fluid!</a></li> -->
   </ul>
 </nav>
 
