--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="testing">
 <meta name="author" content="">
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link rel="shortcut icon" href="images/favicon.jpg" />
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
@@ -33,8 +33,6 @@
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
 </head>
 <body>
  <!-- Navigation -->
@@ -46,11 +44,11 @@
           <nav id="main" class="mobile">
   <span class="openMenu hide-desktop">Open</span>
   <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/about/">About</a></li>
-    <li><a href="/grid/">Grid</a></li>
-    <li><a href="/various/">Features</a></li>
-    <!-- <li><a href="/fluid/">Try Me Fluid!</a></li> -->
+    <li><a href="#">Home</a></li>
+    <li><a href="about/index.html">About</a></li>
+    <li><a href="grid/index.html">Grid</a></li>
+    <li><a href="various/index.html">Features</a></li>
+    <!-- <li><a href="fluid/index.html">Try Me Fluid!</a></li> -->
   </ul>
 </nav>
 
