--- a/example/tables.html
+++ b/example/tables.html
@@ -44,10 +44,10 @@
 				<nav id="main" class="mobile">
 				<span class="openMenu hide-desktop">Open</span>
 				<ul>
-					<li><a href="../example/index.html">Home</a></li>
-					<li><a href="../example/about.html">About</a></li>
-					<li><a href="../example/grid.html">Grid</a></li>
-					<li><a href="../example/documentation.html">Docs</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="grid.html">Grid</a></li>
+					<li><a href="documentation.html">Docs</a></li>
 				</ul>
 			</nav>
 		</div>
