Documentation wiki link added to page

--- a/documentation.html
+++ b/documentation.html
@@ -55,10 +55,9 @@
 	<section id="features">
 		<div class="container">
 			<article class="grid-8">
-					<h2>Working Hard on an Update</h2>
+				<h2>Wiki on Github</h2>
 
-		      <p>The team is working hard to update the documentation to make it available for use and in order to help all our users understand how to build awesome websites with Centurion.</p>
-		      <p>In the meantime, download Centurion play around with it and let us know if there are any features or bugs that you notice in the code. We are always streamlining it for optimal efficiency and usage in the community. The best part about Centurion is that we use it to and find new ways to get the code up to speed.</p>
+		      		<p>The <a href="https://github.com/jhough10/Centurion/wiki/">documentation for Centurion</a> is currently being written using Github. Please refer to that documentation for any information that you might need in utlizing Centurion on your next web project.</p>
 
 				<!-- end of content -->
 			</article>
