--- a/example/documentation.html
+++ b/example/documentation.html
@@ -63,53 +63,16 @@
   <h1>Documentation</h1>
 
 
-  <h3>Navigation</h3>
-  <nav>
-    <ul>
-      <li><a href="#">Test</a></li>
-      <li><a href="#">Test</a></li>
-      <li><a href="#">Test</a></li>
-      <li><a href="#">Test</a></li>
-    </ul>
-  </nav>
-  <div class="clear"></div>
 
+  <p>Check out the documentation for Centurion on <a href="https://github.com/jhough10/Centurion/wiki">Github</a>.</p>
 
-  <h3>Breadcrumbs</h3>
-  <ul class="cCrumbs">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Features</a></li>
-    <li><a href="#">Gene Splicing</a></li>
-    <li class="current"><a href="#">Home</a></li>
-  </ul>
-
-  <h3>Panels</h3>
-  <div class="panels">
-    <h3>My panel is bigger than yours.</h3>
-    <p>Seriously, just look at this sweet panel.</p>
-  </div>
-
-
-  <p>More information will be coming soon once I have finalized most of the template and the various portions of the template. For now it includes the basic framework, which can be shrinked using modern CSS3 media queries, 6 types of buttons in 3 different sizes, headings that respond to the size to the viewable screen size. Stay tuned for more features added daily.</p>
-  <h2>Some Lorem Ipsum Text</h2>
-  <p>Duis magna leo, dapibus id adipiscing id, egestas sed dui. Proin venenatis dui eu augue sagittis vitae suscipit diam sagittis. Suspendisse malesuada elementum enim, dictum congue purus varius nec. Suspendisse et neque nunc. Morbi porttitor risus eu tortor interdum id porttitor justo aliquet. Nam tincidunt felis ac purus varius tincidunt. Quisque luctus faucibus dolor, sit amet condimentum augue egestas quis. Nam rutrum, ante quis commodo tincidunt, orci ante ultrices quam, eu ullamcorper purus eros id magna. Nulla ac neque ac mi interdum ultricies. Nullam sagittis est in mauris adipiscing posuere. Aenean volutpat sapien sit amet sapien malesuada quis posuere massa pretium. Sed hendrerit egestas fermentum. Ut fringilla sodales neque, sit amet euismod diam pulvinar sit amet. Nulla vestibulum commodo tempus.</p>
-  <p>Morbi semper elit vel massa dapibus fringilla. In et imperdiet mi. Quisque id aliquam nisi. Nunc euismod felis est. Donec non enim elit, nec vulputate elit. Nullam in ligula ac nisi faucibus adipiscing. Suspendisse eget placerat eros. Aenean sed mi purus, ac tincidunt elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus fermentum nibh non dui consequat nec malesuada augue molestie. Curabitur convallis urna non lacus porttitor at tempor ante faucibus. Suspendisse rhoncus ornare risus sed consectetur. Etiam a diam turpis. Vestibulum sed urna eget nulla tincidunt volutpat id eget nibh.</p>
 </div>
 <!-- end of grid 8 -->
 <div class="grid-4">
-  <h2>Other Features</h2>
-  <ul>
-      <li><a href="tables.html">Tables</a></li>
-      <li><a href="buttons.html">Buttons</a></li>
-      <!--<li><a href="various.html">Various</a></li> -->
-  </ul>
-
 
   <h2>Sidebar</h2>
-  <img src="http://placehold.it/280x200" class="frame" alt="image with caption" />
-  <p class="caption">Captions to describe your images.</p>
-  <h2>More lorem ipsum</h2>
-  <p>Duis magna leo, dapibus id adipiscing id, egestas sed dui. Proin venenatis dui eu augue sagittis vitae suscipit diam sagittis. Suspendisse malesuada elementum enim, dictum congue purus varius nec. Suspendisse et neque nunc. Morbi porttitor risus eu tortor interdum id porttitor justo aliquet. Nam tincidunt felis ac purus varius tincidunt.</p>
+  <p>Arrr! There need be content here.</p>
+
 </div>
 <div class="clear"></div>
     </div>
