--- a/example/grid.html
+++ b/example/grid.html
@@ -68,6 +68,125 @@
 			font-size: 16px;
 			padding: 0;
 		}
+		
+		
+		/* GRID NESTING */
+		
+		#grid [class*="grid-"] [class*="mobile-"] p {
+			background: lightblue;
+		}
+		#grid [class*="grid-"] [class*="pull-"] p {
+			background: lightpink;
+		}
+		#grid [class*="grid-"] [class*="push-"] p {
+			background: lightgreen;
+		}
+
+
+			.container [class*="grid-"] [class*="mobile-"] {
+				box-sizing: border-box;
+				float: left;
+				margin: 0;
+				padding: 0 5px;
+			}
+
+			.container .mobile-10 { width: 10%; }
+			.container .mobile-20 { width: 20%; }
+				.container .mobile-25 { width: 25%; }
+
+			.container .mobile-30 { width: 30%; }
+			.container .mobile-40 { width: 40%; }
+			.container .mobile-50 { width: 50%; }
+			.container .mobile-60 { width: 60%; }
+			.container .mobile-70 { width: 70%; }
+				.container .mobile-75 { width: 75%; }
+
+			.container .mobile-80 { width: 80%; }
+			.container .mobile-90 { width: 90%; }
+
+			.container .mobile-33 { width: 33.3%; }
+			.container .mobile-66 { width: 66.5%; }
+
+			.container [class*="mobile-"].alpha { padding-left: 0; }
+			.container [class*="mobile-"].omega { padding-right: 0; }
+
+			.container [class*="mobile-"].pull-90 { left: -90%; }
+			.container [class*="mobile-"].push-90 { left: 90%; }
+
+			.container [class*="mobile-"].pull-80 { left: -80%; }
+			.container [class*="mobile-"].push-80 { left: 80%; }
+
+			.container [class*="mobile-"].pull-70 { left: -70%; }
+			.container [class*="mobile-"].push-70 { left: 70%; }
+
+			.container [class*="mobile-"].pull-60 { left: -60%; }
+			.container [class*="mobile-"].push-60 { left: 60%; }
+
+			.container [class*="mobile-"].pull-50 { left: -50%; }
+			.container [class*="mobile-"].push-50 { left: 50%; }
+
+			.container [class*="mobile-"].pull-40 { left: -40%; }
+			.container [class*="mobile-"].push-40 { left: 40%; }
+
+			.container [class*="mobile-"].pull-30 { left: -30%; }
+			.container [class*="mobile-"].push-30 { left: 30%; }
+
+			.container [class*="mobile-"].pull-20 { left: -20%; }
+			.container [class*="mobile-"].push-20 { left: 20%; }
+
+			.container [class*="mobile-"].pull-10 { left: -10%; }
+			.container [class*="mobile-"].push-10 { left: 10%; }
+
+
+			.container [class*="mobile-"].pull-75 { left: -75%; }
+			.container [class*="mobile-"].push-75 { left: 75%; }
+
+			.container [class*="mobile-"].pull-25 { left: -25%; }
+			.container [class*="mobile-"].push-25 { left: 25%; }
+
+			.container [class*="mobile-"].pull-33 { left: -33%; }
+			.container [class*="mobile-"].push-33 { left: 33%; }
+
+			.container [class*="mobile-"].pull-66 { left: -66%; }
+			.container [class*="mobile-"].push-66 { left: 66%; }
+
+		@media screen and (max-width: 520px) and (min-width: 200px) {
+			.container [class*="grid-"] {
+				display: inline;
+				float: left;
+				margin-left: 0;
+				margin-right: 0;
+				width: 100%;
+			}
+			.container [class*="grid-"] [class*="mobile-"] {
+				box-sizing: border-box;
+				float: left;
+				margin: 0;
+				padding: 5px;
+			}
+			.container .mobile-10 { width: 10%; }
+			.container .mobile-20 { width: 20%; }
+				.container .mobile-25 { width: 25%; }
+			.container .mobile-30 { width: 30%; }
+			.container .mobile-40 { width: 40%; }
+			.container .mobile-50 { width: 50%; }
+			.container .mobile-60 { width: 60%; }
+			.container .mobile-70 { width: 70%; }
+				.container .mobile-75 { width: 75%; }
+			.container .mobile-80 { width: 80%; }
+			.container .mobile-90 { width: 90%; }
+
+			.container .mobile-33 { width: 33.3%; }
+			.container .mobile-66 { width: 66.5%; }
+
+			.container [class*="mobile-"].alpha { padding-left: 0; }
+			.container [class*="mobile-"].omega { padding-right: 0; }
+
+			.container .pull-50 { left: 50%; }
+			.container .push-50 { right: 50%; }
+
+		}
+		
 	</style>
 
 </head>
@@ -359,6 +478,191 @@
     <p>Grid 12</p>
 </div>
 <div class="clear"></div>
+
+
+
+<!-- GRID NESTING -->
+<div class="grid-12">
+  <h2>Nesting Grid Elements</h2>
+
+  <p class="noStyle">Elements with green are pulled to the left, pink are pushed to the right, and anything in lightblue is a nested element within the grid element above.</p> 
+  
+</div>
+
+
+
+<div class="grid-2">
+		<p>Grid 2</p>
+		 <div class="mobile-50 alpha">
+			<p>50%</p>
+		</div>
+		<div class="mobile-50 omega">
+			<p>50%</p>
+		</div>
+	</div>
+	<div class="grid-10">
+		<p>Grid 10</p>
+		<div class="mobile-20 alpha">
+			<p>20%</p>
+		</div>
+		<div class="mobile-20">
+			<p>20%</p>
+		</div>
+		<div class="mobile-20">
+			<p>20%</p>
+		</div>
+		<div class="mobile-20">
+			<p>20%</p>
+		</div>
+		<div class="mobile-20 omega">
+			<p>20%</p>
+		</div>
+
+	</div>
+<div class="clear"></div>
+
+
+	<div class="grid-9">
+		<p>Grid 9</p>
+		<div class="mobile-66 alpha">
+			<p>66%</p>
+		</div>
+		<!--<div class="grid-3 mobile-33">
+			<p>Grid 33</p>
+		</div>-->
+		<div class="mobile-33 omega">
+			<p>33%</p>
+		</div>
+	</div>
+
+	<div class="grid-3">
+		<p>Grid 3</p>
+
+		<div class="mobile-33 alpha">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33 omega">
+			<p>33%</p>
+		</div>
+
+	</div>
+	<div class="clear"></div>
+
+
+
+
+
+	<div class="grid-4">
+		<p>Grid 4</p>
+
+		<div class="mobile-50 alpha">
+			<p>50%</p>
+		</div>
+		<div class="mobile-50 omega">
+			<p>50%</p>
+		</div>
+
+	</div>
+	<div class="grid-8">
+		<p>Grid 8</p>
+
+		<div class="mobile-25 push-75 omega">
+			<p>25%</p>
+		</div>
+		<div class="mobile-75 pull-25 alpha">
+			<p>75%</p>
+		</div>
+	</div>
+	<div class="clear"></div>
+
+
+
+<div class="grid-6">
+		<p>Grid 6</p>
+
+		<div class="mobile-50 alpha">
+			<p>50%</p>
+		</div>
+		<div class="mobile-50 omega">
+			<p>50%</p>
+		</div>
+
+	</div>
+	<div class="grid-6">
+		<p>Grid 6</p>
+
+		<div class="mobile-33 alpha">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33 omega">
+			<p>33%</p>
+		</div>
+	</div>
+
+
+
+
+	<div class="grid-6">
+		<p>Grid 6</p>
+
+		<div class="mobile-10 alpha">
+			<p>10%</p>
+		</div>
+
+		<div class="mobile-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10 push-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10 pull-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10 push-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10 pull-10">
+			<p>10%</p>
+		</div>
+		<div class="mobile-10">
+			<p>10%</p>
+		</div>
+
+		<div class="mobile-10 omega">
+			<p>10%</p>
+		</div>
+
+	</div>
+	<div class="grid-6">
+		<p>Grid 6</p>
+
+		<div class="mobile-33 alpha">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33">
+			<p>33%</p>
+		</div>
+		<div class="mobile-33 omega">
+			<p>33%</p>
+		</div>
+	</div>
+	<div class="clear"></div>
+
+
+
+
     </div>
     <!-- container -->
     <div class="clear"></div>
