Removed mobile grid code

--- a/example/grid.html
+++ b/example/grid.html
@@ -68,10 +68,10 @@
 			font-size: 16px;
 			padding: 0;
 		}
-		
-		
+
+
 		/* GRID NESTING */
-		
+
 		#grid [class*="grid-"] [class*="mobile-"] p {
 			background: lightblue;
 		}
@@ -83,7 +83,7 @@
 		}
 
 
-			.container [class*="grid-"] [class*="mobile-"] {
+/*			.container [class*="grid-"] [class*="mobile-"] {
 				box-sizing: border-box;
 				float: left;
 				margin: 0;
@@ -106,6 +106,7 @@
 
 			.container .mobile-33 { width: 33.3%; }
 			.container .mobile-66 { width: 66.5%; }
+
 
 			.container [class*="mobile-"].alpha { padding-left: 0; }
 			.container [class*="mobile-"].omega { padding-right: 0; }
@@ -150,6 +151,8 @@
 			.container [class*="mobile-"].pull-66 { left: -66%; }
 			.container [class*="mobile-"].push-66 { left: 66%; }
 
+
+
 		@media screen and (max-width: 520px) and (min-width: 200px) {
 			.container [class*="grid-"] {
 				display: inline;
@@ -186,7 +189,7 @@
 			.container .push-50 { right: 50%; }
 
 		}
-		
+			*/
 	</style>
 
 </head>
@@ -485,8 +488,8 @@
 <div class="grid-12">
   <h2>Nesting Grid Elements</h2>
 
-  <p class="noStyle">Elements with green are pulled to the left, pink are pushed to the right, and anything in lightblue is a nested element within the grid element above.</p> 
-  
+  <p class="noStyle">Elements with green are pulled to the left, pink are pushed to the right, and anything in lightblue is a nested element within the grid element above.</p>
+
 </div>
 
 
