cleaned up code

--- a/test_features.html
+++ b/test_features.html
@@ -131,13 +131,13 @@ TABS
 			</div>
 
 
-<code><pre>
+<pre><code>
 &lt;ul class="tabs"&gt;
 	&lt;li class="active"&gt;&lt;a href="#"&gt;Tab 1&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href="#"&gt;Tab 2&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href="#"&gt;Tab 3&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;
-</pre></code>
+</code></pre>
 
 				<p><strong>Tabs on Bottom</strong></p>
 				<ul class="tabsBottom">
@@ -146,12 +146,12 @@ TABS
 					<li><a href="">Tab 3</a></li>
 				</ul>
 
-<code><pre>
+<pre><code>
 &lt;ul class="tabsBottom"&gt;
 	&lt;li class="active"&gt;&lt;a href=""&gt;Tab 1&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href=""&gt;Tab 2&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href=""&gt;Tab 3&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;</pre></code>
+&lt;/ul&gt;</code></pre>
 
 
 				<p><strong>Tabs Stacked</strong></p>
@@ -161,12 +161,12 @@ TABS
 					<li><a href="">Tab 3</a></li>
 				</ul>
 
-<code><pre>
+<pre><code>
 &lt;ul class="tabsStacked"&gt;
 	&lt;li class="active"&gt;&lt;a href=""&gt;Tab 1&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href=""&gt;Tab 2&lt;/a&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href=""&gt;Tab 3&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;</pre></code>
+&lt;/ul&gt;</code></pre>
 
 
 <p class="pushDown">&nbsp;</p>
@@ -181,7 +181,7 @@ TOOLTIPS
 	<h2>Tooltips</h2>
 
 
-	<p>Donec <a rel="tooltip" class="tipClick" title="A paragraph typically consists of a <strong>unifying,</strong> main point. A paragraph typically consists of a <strong>unifying,</strong> main point.">pulvinar ante mollis</a> lectus blandit at euismod sapien pretium. Etiam enim sapien, ullamcorper ac imperdiet nec, imperdiet ac leo. Nunc sodales, felis id interdum varius, risus nisl vestibulum diam, vel luctus sem mi ac orci. Aliquam erat volutpat. Donec nunc lorem, porttitor ut aliquam sit amet, placerat ac leo. <a rel="tooltip" class="tipClick" title="A paragraph typically consists of a <strong>unifying,</strong> main point. A paragraph typically consists of a <strong>unifying,</strong> main point.">Vestibulum tincidunt</a>, est vel placerat dictum, leo nibh fringilla erat, a vestibulum justo nulla ut nunc. Sed vehicula, tortor eget dictum adipiscing, augue erat aliquet orci, id bibendum purus nisl quis massa. Cras tristique tellus porta ipsum feugiat tristique. In lacus enim, feugiat ac placerat in, pellentesque sit amet est. Nam facilisis consequat tellus, sed fermentum ante tempus ac. Sed et gravida mi. Ut pellentesque diam sed ligula rhoncus vulputate. Proin congue consectetur posuere. Vestibulum ut leo libero, <a rel="tooltip" class="tipClick bottom" title="This tip keeps disappearing if I leave the word. I want it to stay. I want it to stay. *SOB*">id tincidunt tortor</a>. Donec vel venenatis ante.</p>
+	<p>Donec <a rel="tooltip" class="tipClick" title="A paragraph typically consists of a unifying, main point. A paragraph typically consists of a unifying, main point.">pulvinar ante mollis</a> lectus blandit at euismod sapien pretium. Etiam enim sapien, ullamcorper ac imperdiet nec, imperdiet ac leo. Nunc sodales, felis id interdum varius, risus nisl vestibulum diam, vel luctus sem mi ac orci. Aliquam erat volutpat. Donec nunc lorem, porttitor ut aliquam sit amet, placerat ac leo. <a rel="tooltip" class="tipClick" title="A paragraph typically consists of a unifying, main point. A paragraph typically consists of a unifying, main point.">Vestibulum tincidunt</a>, est vel placerat dictum, leo nibh fringilla erat, a vestibulum justo nulla ut nunc. Sed vehicula, tortor eget dictum adipiscing, augue erat aliquet orci, id bibendum purus nisl quis massa. Cras tristique tellus porta ipsum feugiat tristique. In lacus enim, feugiat ac placerat in, pellentesque sit amet est. Nam facilisis consequat tellus, sed fermentum ante tempus ac. Sed et gravida mi. Ut pellentesque diam sed ligula rhoncus vulputate. Proin congue consectetur posuere. Vestibulum ut leo libero, <a rel="tooltip" class="tipClick bottom" title="This tip keeps disappearing if I leave the word. I want it to stay. I want it to stay.">id tincidunt tortor</a>. Donec vel venenatis ante.</p>
 
 
 <p class="pushDown">&nbsp;</p>
@@ -199,48 +199,48 @@ ALERTS
 
 
 			<div class="alert error">
-				<span href="#" class="close"></span>
+				<span class="close"></span>
 				<p>This is default alert box!</p>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="alert error"&gt;
   &lt;span href="#" class="close"&gt;close&lt;/span&gt;
   &lt;p&gt;This is default alert box!&lt;/p&gt;
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 			<div class="alert warning">
-				<span href="#" class="close"></span>
+				<span class="close"></span>
 				<p>This is default alert box!</p>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="alert warning"&gt;
   ...
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 
 			<div class="alert info">
-				<span href="#" class="close"></span>
+				<span class="close"></span>
 				<p>This is default alert box!</p>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="alert info"&gt;
   ...
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 			<div class="alert success">
-				<span href="#" class="close"></span>
+				<span class="close"></span>
 				<p>This is default alert box!</p>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="alert success"&gt;
   ...
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 
@@ -268,7 +268,7 @@ PAGINATION
 			</ul>
 		</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="pagination"&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href="#"&gt;&laquo;&lt;/a&gt;&lt;/li&gt;
@@ -280,7 +280,7 @@ PAGINATION
     &lt;li&gt;&lt;a href="#"&gt;6&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="#"&gt;&raquo;&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 			<div class="pagination vertical">
@@ -296,12 +296,12 @@ PAGINATION
 				</ul>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="pagination vertical"&gt;
   &lt;ul&gt;
     ...
   &lt;/ul&gt;
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 
@@ -318,12 +318,12 @@ PAGINATION
 				</ul>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="pagination large"&gt;
   &lt;ul&gt;
     ...
   &lt;/ul&gt;
-&lt;/div&gt;</pre></code>
+&lt;/div&gt;</code></pre>
 
 
 			<div class="pagination small">
@@ -339,13 +339,12 @@ PAGINATION
 				</ul>
 			</div>
 
-<code><pre>
+<pre><code>
 &lt;div class="pagination small"&gt;
   &lt;ul&gt;
     ...
   &lt;/ul&gt;
-&lt;/div&gt;</pre></code>
-
+&lt;/div&gt;</code></pre>
 
 
 <p class="pushDown">&nbsp;</p>
@@ -477,8 +476,8 @@ IMAGES
 			<a name="images"></a>
 			<h2>Images</h2>
 
-			<img src="http://placehold.it/200" class="push-left" />
-			<img src="http://placehold.it/200" class="push-left portrait" />
+			<img src="http://placehold.it/200" class="push-left" alt="" />
+			<img src="http://placehold.it/200" class="push-left portrait" alt="" />
 
 
 
@@ -510,7 +509,7 @@ IMAGES
     <div class="clear"></div>
   </section>
   <!-- End of Content Section -->
-</div>
+
 <!-- End of Wrapper -->
 
   <!-- Footer -->
