--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<p>&nbsp;</p>
 			<div class="clear"></div>
 
-			<article class="cPanel">
+			<article class="grid-12">
 				<h2>Use Centurion for your next web project</h2>
 				<p>If you need more convincing about the power of Centurion for your next web project, visit our <a href="features.html">features</a> page to find out all you need to know about the different elements that come built in. If you are unfamiliar with the gambit of options, check out our <a href="documentation.html">documentation</a> on Centurion for syntax and class structures.</p>
 
