--- a/features.html
+++ b/features.html
@@ -64,11 +64,11 @@
 
 		       <!-- FEATURE 1 -->
 				<section>
-					<article class="grid-5 alpha">
+					<article class="grid-5">
 						<h2>Self Contained</h2>
 						<p>Centurion is built with fewer files and packaged to be all inclusive.</p>
 					</article>
-		    	<article class="grid-3 omega">
+		    	<article class="grid-3">
 						<img src="graphics/briefcase.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
@@ -76,10 +76,10 @@
 
 		    <!-- FEATURE 2 -->
 		    <section>
-		    	<article class="grid-3 alpha">
+		    	<article class="grid-3">
 						<img src="graphics/code.jpg" class="hide-mobile" alt="feature" />
 					</article>
-					<article class="grid-5 omega">
+					<article class="grid-5">
 						<h2>Semantic</h2>
 						<p>With HTML5 and CSS 3 in mind everything has been scaled to leverage modern media queries, gradients, and other features that give Centurion a unique look and feel with less.</p>
 					</article>
@@ -89,11 +89,11 @@
 
 				<!-- FEATURE 3 -->
 				<section>
-					<article class="grid-5 alpha">
+					<article class="grid-5">
 						<h2>Easy to Learn</h2>
 						<p>Classes and ID's make sense. Finding it hard to learn a new framework? Centurion features easy to read markup, stylying elements makes sense based on what the usage is and it even comes fully documented (coming soon) so you can find what you need fast.</p>
 					</article>
-		    	<article class="grid-3 omega">
+		    	<article class="grid-3">
 						<img src="graphics/book.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
@@ -101,10 +101,10 @@
 
 		    <!-- FEATURE 4 -->
 		    <section>
-		    	<article class="grid-3 alpha">
+		    	<article class="grid-3">
 						<img src="graphics/guage.jpg" class="hide-mobile" alt="feature" />
 					</article>
-					<article class="grid-5 omega">
+					<article class="grid-5">
 						<h2>Optimized</h2>
 						<p>The code has been optimized for a minimal footprint on web development projects. No more bloated code that is hard to understand and slows your browser down.</p>
 					</article>
@@ -114,12 +114,12 @@
 
 				<!-- FEATURE 5 -->
 				<section>
-					<article class="grid-5 alpha">
+					<article class="grid-5">
 						<h2>Responsive</h2>
 						<p>A responsive grid layout makes scaling a web layout for smaller devices a breeze. Take a seat, build your desktop version and watch it scale for your phone instantly.</p>
 					</article>
 
-		    	<article class="grid-3 omega">
+		    	<article class="grid-3">
 						<img src="graphics/rocket.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
@@ -127,10 +127,10 @@
 
 		    <!-- FEATURE 6 -->
 		    <section>
-		    	<article class="grid-3 alpha">
+		    	<article class="grid-3">
 						<img src="graphics/tools.jpg" class="hide-mobile" alt="feature" />
 					</article>
-					<article class="grid-5 omega">
+					<article class="grid-5">
 						<h2>Customizable</h2>
 						<p>Custom scripts for navigation, tables, and tabbed elements were built using coffeescript and are easily modifiable for flexibiliy. Even the CSS was built using Sass making it easy to include or exclude any portions of the code you may or may not want.</p>
 					</article>
@@ -139,12 +139,12 @@
 
 				<!-- FEATURE 7 -->
 				<section>
-					<article class="grid-5 alpha">
+					<article class="grid-5">
 						<h2>Integrated</h2>
 						<p>Comes integrated with several JavaScript libraries, such as, jQuery, Coffeescript, Craydent and more. </p>
 					</article>
 
-		    	<article class="grid-3 omega">
+		    	<article class="grid-3">
 						<img src="graphics/grad_cap.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
